# AI-Powered-Minesweeper

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Board.hpp  Game.hpp
src/: board.cpp  game.cpp  main.cpp
tests/: CMakeLists.txt  test_board.cpp
